# hack-change-2025

./: Hack_Change.ipynb  README.md  hack-change-8.ipynb  main.py  model.py  prediction_for_test.csv
backend/: .gitignore  Dockerfile  Makefile  docker-compose.yml  init.sh  pyproject.toml  records
backend/src/: config.py  main.py
backend/src/data/: 431cd036-adf4-4f48-a3cb-0d0dabdd9b52.csv  6af2ff88-54ea-47a7-abf2-ec02b1357692.csv  9f009f08-9a11-4c5c-b89f-c9526bc0e3e9.csv  d58f924e-82d0-4192-ae75-c698a6917dd6.csv
backend/src/db/: initial.py  session.py  tables.py
backend/src/ml/: dataset.py  download.py  download.sh  get_metrics_by_train.py  loader.py  metrics.py  model.py  predict_for_table.py  predict_label.py  predict_utils.py  tokenizer.py
backend/src/routers/: sentimental_report_router.py  sentimental_router.py  user_router.py
backend/src/schemas/: sentimental_report_schema.py  sentimental_schema.py  user_schema.py
backend/src/service/: sentimantal_report_service.py  user_service.py
backend/src/services/: sentimental_predictor.py  sentimental_report_service.py  user_service.py
custom_rnn_backend/: .dockerignore  Makefile  docker-compose.yml  example.env
frontend/: Dockerfile  README.md  package-lock.json  package.json
ml/: Hack_Change.ipynb  Hack_Change_Transformer.ipynb  README.md  dataset.py  get_metrics_by_train.py  hack-change-4.ipynb  hack-change-8.ipynb  hack-change-transformer (1) (1).ipynb  hack-change-transformer.ipynb  hack-change.ipynb  loader.py  main.py  metrics.py  model.py  predict_for_table.py  predict_label.py  requirements.txt  test_first_100.csv  tokenizer.py  train_first_100.csv  train_first_1000.csv
(+38 files in other folders)
